ollama.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-backend
  namespace: ollama 
  labels:
    app: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
      - name: ollama
        image: ollama/ollama:latest
        ports:
        - containerPort: 11434
        resources:
          requests:
            memory: "8Gi"
            cpu: "4000m"
          limits:
            memory: "10Gi"
            cpu: "5000m"
