ollama.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-backend
  namespace: ollama 
  labels:
    app: ollama
spec:
  selector:
    app: ollama
  ports:
    - protocol: TCP
      port: 11434
      targetPort: 11434
  type: ClusterIP
