webui.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui-frontend
  namespace: ollama 
  labels:
    app: webui
spec:
  selector:
    app: webui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
